Stop scrollbar appearing when login button hovered

--- a/src/client/nav/navbar.scss
+++ b/src/client/nav/navbar.scss
@@ -3,6 +3,8 @@
 .navbar-container {
     flex-shrink: 0;
     width: 100%;
+    max-width: 100vw;
+    overflow: hidden;
 }
 
 .navbar {
